fix(fe): avoid Last Scans element overflows #369

--- a/src/frontend/src/views/Administration.scss
+++ b/src/frontend/src/views/Administration.scss
@@ -47,7 +47,7 @@
 thead, tbody tr {
     display:table;
     width:100%;
-    table-layout:fixed;/* even columns width , fix width of table too*/
+    table-layout:auto;
 }
 
 tbody {
